--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">PI</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="planets_array">
+        <item>Todos</item>
+        <item>Notícias</item>
+        <item>Notícias Públicas</item>
+        <item>Notícias Privadas</item>
+        <item>Eventos</item>
+    </string-array>
+
 </resources>
